// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test several shapes of the form when passing empty list of measures renders charts with empty chart list 1`] = `
<div>
  <section
    class="container"
  />
</div>
`;

exports[`test several shapes of the form when passing one measures renders charts with one chart 1`] = `
<div>
  <section
    class="container"
  >
    <div />
  </section>
</div>
`;

exports[`test several shapes of the form when passing several measures renders charts with several charts 1`] = `
<div>
  <section
    class="container"
  >
    <div />
    <div />
    <div />
    <div />
    <div />
  </section>
</div>
`;
